# django-openstax-accounts

./: CLAUDE.md  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
openstax_accounts/: apps.py  functions.py  strategy_2.py  test_settings.py  tests.py  views.py
